docs(research): #218 implementation readiness review
Why: Before PR 1 starts, validate the plan rather than assume it: confirm
     acceptance criteria at every level, reclassify every Stage 1
     assumption by risk type, and check the SIMD port's correctness
     properties analytically instead of deferring to "run the tests and
     see."
What: Added §16. Two new findings not previously in the doc: (1)
      addFeature/subtractFeature are elementwise and evaluate()'s
      reduction is integer-associative, so a vectorized port is
      bit-identical by construction -- the existing
      NnueIncrementalVsRebuildFuzzTest + NnueGoldenEvalTest are
      sufficient validation for Stage 1, no new test category needed;
      (2) evaluate()'s worst-case accumulation (~2.13B) sits within
      ~17M of int32's ceiling -- a Stage 2 vector reduction must keep
      64-bit accumulation, a concrete trap for whoever writes PR 4.
      Also flagged that NnueCorpusBenchmarkTest's default width-8
      synthetic network would understate any real SIMD speedup (half
      an AVX2 lane) and must be re-parameterized to width 256 before
      Level 1 measurements mean anything. Verdict: #218 is ready:
      begin with PR 1, whose scaffolding work is itself the validation
      of the one remaining open unknown (compile-JDK-21/runtime-JDK-25
      incubator-module compatibility).
Out of scope: Implementing Vector API, modifying evaluator code, or
      changing search heuristics -- this is a readiness review only.
Refs #218 Phase: 15 — nnue